--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,10 +4,16 @@
     {% for post in posts %}
         <div class="post">
             <div class="date">
-                <p>published: {{ post.published_date }}</p>
+                <p>publicado em: {{ post.published_date }}</p>
             </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <p>{{ post.text|truncatewords:50 }}</p>
+            <a href="{% url 'post_detail' pk=post.pk %}" class="read-more">Leia mais...</a>
         </div>
     {% endfor %}
+    {% if user.is_authenticated %}
+        <a href="{% url 'post_new' %}" class="fab-button">
+            <i class="bi bi-plus-lg"></i>
+        </a>
+    {% endif %}
 {% endblock %}
